--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DB_HOST=5432
 DB_USERNAME=postgress
 DB_DATABASE=reparaciondemotos
 NODE_ENV=development
+SECRET_JWT_SEED=U295QWx2YXJvRWxtYXNndWFwb3llbG1lam9ydGVhbW9hbHZhcm8
+JWT_EXPIRE_IN=2h
