--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
+    "perfect-express-sanitizer": "^1.0.11",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.0"
