--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
@@ -25,6 +26,7 @@
     "perfect-express-sanitizer": "^1.0.11",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
+    "remove": "^0.1.5",
     "sequelize": "^6.32.0"
   },
   "devDependencies": {
